// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioLogo renders with L2 icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c1 img {
  width: 20px;
  height: 40px;
  object-fit: cover;
}

.c1 img:first-child {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c1 img:last-child {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c2 {
  width: 20px;
  height: 40px;
  border-radius: 50%;
}

.c3 {
  background-color: #F9F9F9;
  border-radius: 2px;
  width: 15px;
  height: 15px;
  left: 60%;
  position: absolute;
  top: 60%;
  outline: 2px solid #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

<div>
  <span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0"
      >
        <div
          class="c1"
          size="40"
        >
          <img
            class="c2"
            size="40"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/arbitrum/assets/0xDA10009cBd5D07dd0CeCc66161FC93D7c9000da1/logo.png"
          />
          <img
            class="c2"
            size="40"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/arbitrum/assets/0xaf88d065e77c8cC2239327C5EDb3A432268e5831/logo.png"
          />
        </div>
        <div
          class="c3"
        >
          <svg
            aria-labelledby="titleID"
            height="100%"
            style="width: 100%; height: 100%;"
            width="100%"
          >
            <title
              id="titleID"
            >
              Arbitrum logo
            </title>
            <rect
              fill="#F9F9F9"
              height="100%"
              rx="2"
              width="100%"
            />
            <rect
              fill="#00A3FF33"
              height="100%"
              rx="2"
              width="100%"
            />
            <svg
              height="100%"
              width="100%"
            >
              arbitrum.svg
            </svg>
          </svg>
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`PortfolioLogo renders without L2 icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c1 img {
  width: 20px;
  height: 40px;
  object-fit: cover;
}

.c1 img:first-child {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c1 img:last-child {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c2 {
  width: 20px;
  height: 40px;
  border-radius: 50%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

<div>
  <span
    class="t_light is_inversed _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0"
      >
        <div
          class="c1"
          size="40"
        >
          <img
            class="c2"
            size="40"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
          />
          <img
            class="c2"
            size="40"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;
